<resources>
    <string name="app_name">NUMAD21Fa_NadiiaRamthun</string>
    <string name="about">About</string>
    <string name="clicky_clicky">Clicky Clicky</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="pressed">Pressed: -</string>
    <string name="pressedA">Pressed: A</string>
    <string name="pressedB">Pressed: B</string>
    <string name="pressedC">Pressed: C</string>
    <string name="pressedD">Pressed: D</string>
    <string name="pressedE">Pressed: E</string>
    <string name="pressedF">Pressed: F</string>
    <string name="link_collector">Link Collector</string>
    <string name="add_item">Add item</string>
    <string name="name">name</string>
    <string name="url">url</string>
    <string name="ok">OK</string>
    <string name="location">Location</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="service">Service</string>
    <string name="nationalities">Nationalities</string>
    <string name="number_of_users">Number of users</string>
    <string name="br">BR</string>
    <string name="ir">IR</string>
    <string name="ca">CA</string>
    <string name="gb">GB</string>
    <string name="nz">NZ</string>
    <string name="us">US</string>
    <string name="fr">FR</string>
    <string name="ie">IE</string>
    <string name="es">ES</string>
    <string name="tr">TR</string>
    <string name="ch">CH</string>
    <string name="de">DE</string>
    <string name="dk">DK</string>
    <string name="au">AU</string>
    <string name="fi">FI</string>
    <string name="nl">NL</string>
    <string name="email">email</string>

    <string-array name="genders">
        <item>all</item>
        <item>female</item>
        <item>male</item>
    </string-array>
</resources>